# beamforming

./: .gitignore  CORDIC_README.md  Makefile  README.md  README_MVDR_QR_Versal.docx  givens_qr.cpp  givens_qr.h  givens_qr_tb.cpp  host_mvdr_qr.cpp  main.c  mvdr_qr.cpp  mvdr_qr.h  mvdr_qr_beamformer.m  mvdr_rtl_dataflow.md  rdbs_mvdr.xpr  run_hls.tcl  tb_mvdr_qr.cpp  timing_1.rpx  video  vitis_link.cfg
Ai/: BUILD_GUIDE.md  MVDR_Connection_Guide.md  Readme.md  covariance_aie.cc  covariance_aie.h  covariance_pair_tables.cc  graph.cpp  graph.h  rdbs_aie.cc  rdbs_aie.h  rdbs_cov_bridge.cpp  synthesis_fixes.md
Final Debug/: debug_followup_response.md  main_v2.c  readme.md
Revised/: MVDR_BD_RECREATION_GUIDE.md  covariance_matrix.cpp  covariance_matrix.h  givens_qr.cpp  givens_qr.h  mvdr_hls_to_vivado_integration_guide.md  tb_covariance_matrix.cpp  tb_givens_qr.cpp
ip/QRD_GIVENS_CORDIC/: Readme.md  VCK190_IP_Integration_Guide.md  VCK190_Vivado_2025_2_Complete_Guide.md  givens.cpp  givens.h  mvdr_vivado_reference.md  tb_givens.cpp
rdbs_mvdr.cache/wt/: synthesis.wdf
rdbs_mvdr.gen/sources_1/bd/mvdrr/ip/mvdrr_covariance_estimation_0_0/drivers/covariance_estimation_v1_0/src/: CMakeLists.txt  Makefile  xcovariance_estimation.c  xcovariance_estimation.h  xcovariance_estimation_hw.h  xcovariance_estimation_linux.c  xcovariance_estimation_sinit.c
rdbs_mvdr.ip_user_files/mem_init_files/: bd_342f_pspmc_0_0_pmc_data.cdo  bd_342f_pspmc_0_0_sysmon_data.json  mvdr_weights.mdd  rdbs_kernel.tcl
rdbs_mvdr.runs/.jobs/: vrs_config_1.xml  vrs_config_2.xml  vrs_config_3.xml  (+3 more)
(+984 files in other folders)
